# Pipebomb

./: LICENSE  NOTICE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: tests.yml
pipebomb/: __init__.py  __init__.pyi  client.py  client.pyi  impl.py  impl.pyi  server.py  server.pyi  utils.py  utils.pyi
pipebomb/gsyncio/: __init__.py  __init__.pyi  go.mod  gsyncio.go
tests/: __main__.py  conftest.py  test_gsyncio.py  test_opcodes.py  test_quality.py  test_relogging.py  test_serialization_deserialization.py
