[tool.uv]
managed = true

[tool.mypy]
allow_redefinition = true
disable_error_code = ["no-redef"]

[[tool.mypy.overrides]]
module = "zstandard.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B110"]
exclude_dirs = [".venv", "tests", "dist"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipebomb"
version = "1.0.0"
description = "You just got mailed a pipe bomb!"
requires-python = ">=3.12, <3.14"
dependencies = [
    "cryptography>=49.0.0",
    "zstandard>=0.25.0",
    "nest_asyncio>=1.6.0",
]
readme = "README.md"

[dependency-groups]
tests = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "bandit[toml]",
    "bandit-sarif-formatter>=1.1.1",
]
