[tool.uv]
managed = true

[tool.mypy]
allow_redefinition = true
disable_error_code = ["no-redef"]

[[tool.mypy.overrides]]
module = "zstandard.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B110"]
exclude_dirs = [".venv", "tests", "dist"]

[build-system]
requires = ["hatchling", "cffi", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
should_use_gsyncio = true
compiled_sdist = false

[tool.hatch.build.targets.wheel]
exclude = [
  "/.github",
  "/tests",
  "/.gitignore",
  "/hatch_build.py",
  "/README.md",
  "/pyproject.toml",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/tests",
  "/.gitignore",
]

[project]
name = "pipebomb"
version = "1.0.0"
description = "You just got mailed a pipebomb!"
requires-python = ">=3.12, <3.14"
dependencies = [
    "cryptography>=49.0.0",
    "zstandard>=0.25.0",
    "nest_asyncio>=1.6.0",
    "cffi>=2.1.0",
]
readme = "README.md"

[dependency-groups]
tests = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "bandit[toml]",
    "bandit-sarif-formatter>=1.1.1",
]
